Added employee benefits - before migratioin

--- a/BethanysPieShopHRM.Server/BethanysPieShopHRM.Server.csproj
+++ b/BethanysPieShopHRM.Server/BethanysPieShopHRM.Server.csproj
@@ -10,4 +10,8 @@
     <ProjectReference Include="..\BethanysPieShopHRM.Shared\BethanysPieShopHRM.Shared.csproj" />
   </ItemGroup>
 
+  <ItemGroup>
+    <Folder Include="Data\" />
+  </ItemGroup>
+
 </Project>
